<resources>
    <string name="app_name">GastosViagem</string>
    <string name="distance_km">Distância em KMs</string>
    <string name="price_liter">Preço do Litro em R$</string>
    <string name="calculate">Calcular</string>
    <string name="SetRoute">Definir a Rota</string>
    <string name="buyHere">Comprar Aqui</string>
    <string name="total">R$</string>
    <string name="seuGastoSera">Seu gasto total será de:</string>
    <string name="fill_all_fields">Preencha todos os campos</string>
</resources>