<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    
    android:orientation="vertical"
    android:layout_margin="16dp"

    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"

        android:orientation="vertical"
        android:layout_margin="16dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Fazer Login" />
            <TextView
                android:text="Seus pontos: "
                android:layout_weight="1"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ouvidoria"
            android:gravity="end"
            android:clickable="true"
            android:contextClickable="true"
           />



        <EditText
            android:id="@+id/editText_Distance"
            android:padding="16dp"
            android:hint="Distance"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_km"/>
            <Button
                android:id="@+id/button_set_route"
                android:layout_weight="1"
                android:text="@string/SetRoute"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/black"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <EditText
            android:id="@+id/editText_Price"
            android:padding="16dp"
            android:hint="Price"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_liter"/>
            <Button
                android:id="@+id/button_buy_here"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/buyHere"/>


        </LinearLayout>

        <EditText
            android:id="@+id/editText_Autonomy"
            android:padding="16dp"
            android:hint="Autonomy"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="horizontal">
            <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Autonomia Km/litro"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ver modelo"
                android:backgroundTint="@color/black"
                android:layout_weight="1"/>

        </LinearLayout>
        <TextView
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seuGastoSera"/>

        <TextView
            android:id="@+id/textViewResult"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"/>

        <Button

            android:id="@+id/button_calculate"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/calculate"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Demandas:"
            android:gravity="center"
            android:textSize="20dp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="23KMs"
                    android:padding="4dp"/>
                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="a R$ 18,38"
                    android:padding="4dp"/>
                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="corrida: R$ 24,45"
                    android:padding="4dp"/>
                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="lucro: R$ 6,07"
                    android:padding="4dp"/>
            </TableRow>
            <TableRow android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="23KMs"
                    android:padding="4dp"/>
                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="23KMs"
                    android:padding="4dp"/>
            </TableRow>
            <TableRow android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="23KMs"
                    android:padding="4dp"/>
                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="23KMs"
                    android:padding="4dp"/>
            </TableRow>
            <TableRow android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="23KMs"
                    android:padding="4dp"/>
                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="23KMs"
                    android:padding="4dp"/>
            </TableRow>
            <TableRow android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="23KMs"
                    android:padding="4dp"/>
                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="23KMs"
                    android:padding="4dp"/>
            </TableRow>
        </TableLayout>


    </LinearLayout>

</ScrollView>


